--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <title>Live Sports Betting Tracker</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <!-- Header -->
@@ -74,7 +74,7 @@
         </div>
     </footer>
 
-    <script src="app.js"></script>
+    <script src="/static/app.js"></script>
     <script>
         // Initialize Lucide icons
         lucide.createIcons();
