Add Polymarket private key authentication support
- Add eth-account library for Ethereum signing
- Add POLYMARKET_PRIVATE_KEY config option
- Implement request signing in PolymarketAPIClient
- Add authentication headers to all Polymarket API calls
- Debug logging for authenticated account initialization

Private key is loaded from environment variable POLYMARKET_PRIVATE_KEY
or defaults to configured value for local development.

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Sports Betting Tracker</title>
+    <title>Locked In</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="stylesheet" href="/static/styles.css">
@@ -15,7 +15,7 @@
             <div class="header-content">
                 <div class="logo">
                     <span class="logo-icon">⚡</span>
-                    <span class="logo-text">Live Sports Betting</span>
+                    <span class="logo-text">Locked In</span>
                 </div>
                 <div class="header-stats">
                     <div class="stat-item">
@@ -70,7 +70,7 @@
     <footer class="footer">
         <div class="container">
             <p>Data from <strong>Diz</strong> & <strong>Nuts</strong></p>
-            <p>Auto-refreshing every 60 seconds</p>
+            <p>Auto-refreshing every ~60 seconds</p>
         </div>
     </footer>
 
