--- a/static/login.html
+++ b/static/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Live Sports Betting</title>
+    <title>Login - Locked In</title>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
         * {
@@ -155,7 +155,7 @@
         <div class="login-card">
             <div class="logo">
                 <span class="logo-icon">⚡</span>
-                <h1 class="logo-text">Live Sports Betting</h1>
+                <h1 class="logo-text">Locked In</h1>
             </div>
 
             <form id="loginForm">
